REGRESSION (r139282): Caret repainting is broken for text-align: center'd <input> https://bugs.webkit.org/show_bug.cgi?id=108283

Patch by Tien-Ren Chen <trchen@chromium.org> on 2013-01-30
Reviewed by Tim Horton.

Occasionally carets won't be fully erased when blinking.
There used to be 1-pixel padding but removed since r139282.
This patch adds back the same workaround.

Source/WebCore:

Need to rebaseline test expectations.

* editing/FrameSelection.cpp:
(WebCore::repaintCaretForLocalRect):

LayoutTests:

* platform/chromium/TestExpectations:
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/126525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141243 268f45cc-cd09-0410-ab3c-d52691b4dbfc